--- a/docs/stylesheets/extra.css
+++ b/docs/stylesheets/extra.css
@@ -81,3 +81,35 @@
   -webkit-mask-image: var(--md-admonition-icon--abstract);
           mask-image: var(--md-admonition-icon--abstract);
 }
+
+.md-banner {
+  background-color: #00aeff;
+}
+
+.scroll-banner {
+  width: 90%;
+  overflow: hidden;
+  white-space: nowrap; 
+  box-sizing: border-box;
+  z-index: 1;
+}
+
+.scroll-banner p {
+  display: inline-block;
+  padding-left: 100%;
+  animation: scroll-left 30s linear infinite;
+  font-weight: 400;
+  color: #ffffff;
+  font-size: medium;
+  margin: 0;
+}
+
+/* Animation */
+@keyframes scroll-left {
+  from {
+    transform: translateX(0%);
+  }
+  to {
+    transform: translateX(-100%);
+  }
+}
