--- a/docs/stylesheets/extra.css
+++ b/docs/stylesheets/extra.css
@@ -28,7 +28,7 @@
 .md-typeset p {
   line-height: 1.8; /* default is ~1.5 */
   font-size: 17px;
-  font-weight:200;
+  font-weight: 10px;
 }
 
 .md-typeset h1 {
